// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Network Router form component should render add form 1`] = `
<div>
  <form
    class="cds--form form-0-2-3 form-react"
    novalidate=""
  >
    <div
      class=""
      id="network-provider"
      name="network-provider"
    >
      <div>
        <h3>
          Network Management Provider
        </h3>
      </div>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select cds--select--invalid"
        >
          <label
            class="cds--label"
            dir="auto"
            for="ems_id"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-5"
            >
              *
            </span>
            Network Manager
          </label>
          <div
            class="cds--select-input__wrapper"
            data-invalid="true"
          >
            <select
              aria-describedby="ems_id-error-msg"
              aria-invalid="true"
              class="cds--select-input"
              id="ems_id"
              name="ems_id"
              title=""
            >
              <option
                class="cds--select-option"
                label="<Choose>"
                value="-1"
              >
                &lt;Choose&gt;
              </option>
              <option
                class="cds--select-option"
                label="Provider 31"
                value="31"
              >
                Provider 31
              </option>
              <option
                class="cds--select-option"
                label="Provider 8"
                value="8"
              >
                Provider 8
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="cds--select__invalid-icon"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8,1C4.2,1,1,4.2,1,8s3.2,7,7,7s7-3.1,7-7S11.9,1,8,1z M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2 c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
              />
              <path
                d="M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8 c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
                data-icon-path="inner-path"
                opacity="0"
              />
            </svg>
            
          </div>
          <div
            class="cds--form-requirement"
            dir="auto"
            id="ems_id-error-msg"
          >
            Required
          </div>
        </div>
      </div>
    </div>
    <div
      class="cds--btn-set"
    >
      <button
        class="cds--btn cds--btn--primary cds--btn--disabled"
        disabled=""
        type="submit"
        variant="primary"
      >
        Add
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`Network Router form component should render edit variant 1`] = `
<div>
  <form
    class="cds--form form-0-2-3 form-react"
    novalidate=""
  >
    <div
      class=""
      id="network-provider"
      name="network-provider"
    >
      <div>
        <h3>
          Network Management Provider
        </h3>
      </div>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select cds--select--disabled"
        >
          <label
            class="cds--label cds--label--disabled"
            dir="auto"
            for="ems_id"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-5"
            >
              *
            </span>
            Network Manager
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              disabled=""
              id="ems_id"
              name="ems_id"
              title=""
            >
              <option
                class="cds--select-option"
                label="<Choose>"
                value="-1"
              >
                &lt;Choose&gt;
              </option>
              <option
                class="cds--select-option"
                label="Provider 31"
                value="31"
              >
                Provider 31
              </option>
              <option
                class="cds--select-option"
                label="Provider 8"
                value="8"
              >
                Provider 8
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
      name="basic-info"
    >
      <div>
        <h3>
          Basic Information
        </h3>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="name"
          >
            Name
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="name"
              name="name"
              type="text"
              value="admin-project-router"
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
      name="network-settings"
    >
      <div>
        <h3>
          Network Settings
        </h3>
      </div>
      <div>
        <div
          class="cds--form-item cds--checkbox-wrapper"
        >
          <input
            checked=""
            class="cds--checkbox"
            id="admin_state_up"
            name="admin_state_up"
            type="checkbox"
            value=""
          />
          <label
            class="cds--checkbox-label"
            for="admin_state_up"
            title=""
          >
            <div
              class="cds--checkbox-label-text"
              dir="auto"
            >
              Admin State
              
            </div>
          </label>
          <div
            class="cds--checkbox__validation-msg"
          />
        </div>
      </div>
    </div>
    <div
      class=""
      name="external-gateway"
    >
      <div>
        <h3>
          External Gateway
        </h3>
      </div>
      <div>
        <div
          class="cds--form-item cds--checkbox-wrapper"
        >
          <input
            checked=""
            class="cds--checkbox"
            id="enable"
            name="enable"
            type="checkbox"
            value=""
          />
          <label
            class="cds--checkbox-label"
            for="enable"
            title=""
          >
            <div
              class="cds--checkbox-label-text"
              dir="auto"
            >
              Enable External Gateway
              
            </div>
          </label>
          <div
            class="cds--checkbox__validation-msg"
          />
        </div>
      </div>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="cloud_tenant_id"
          >
            Cloud Tenant
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="cloud_tenant_id"
              name="cloud_tenant_id"
              title=""
            />
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="cloud_network_id"
          >
            External Network
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="cloud_network_id"
              name="cloud_network_id"
              title=""
            />
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
    </div>
    <div
      class="cds--form-item"
    >
      <div
        class="cds--select"
      >
        <label
          class="cds--label"
          dir="auto"
          for="cloud_subnet_id"
        >
          Fixed IPs Subnet
        </label>
        <div
          class="cds--select-input__wrapper"
        >
          <select
            class="cds--select-input"
            id="cloud_subnet_id"
            name="cloud_subnet_id"
            title="<Choose>"
          >
            <option
              class="cds--select-option"
              label="<Choose>"
              value=""
            >
              &lt;Choose&gt;
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="cds--select__arrow"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
            />
          </svg>
          
        </div>
      </div>
    </div>
    <div
      class="cds--btn-set"
    >
      <button
        class="cds--btn cds--btn--primary"
        type="submit"
        variant="primary"
      >
        Save
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        type="button"
      >
        Reset
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;
